@startuml

title __LABACT3's Class Diagram__\n

  namespace  {
    namespace ree.visualization.labact3 {
      class tree.visualization.labact3.MainApplication {
      }
    }
  }
  

  namespace  {
    namespace ree.visualization.labact3 {
      class tree.visualization.labact3.MainController {
      }
    }
  }
  

  namespace  {
    namespace ree.visualization.labact3 {
      class tree.visualization.labact3.MyBSTree {
      }
    }
  }
  

  tree.visualization.labact3.MainApplication -up-|> javafx.application.Application
  tree.visualization.labact3.MainController .up.|> javafx.fxml.Initializable
  tree.visualization.labact3.MyBSTree o-- tree.visualization.labact3.MyBSTree.TreeNode : root


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
